--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
          <div class="container pt-3">
           <div class="d-flex justify-content-between">
               <div class="d-flex">
-<!--                 <img src="https://img.icons8.com/color/48/000000/india.png" style="width: 30px; height: auto;"/> -->
+                <img src="https://img.icons8.com/color/48/000000/india.png" style="width: 30px; height: auto;"/> 
                </div>
          <div class="d-flex gap-2">
             <p class="fw-light" >Guides <span class="p-3">Terms of sale</span> <span>Terms of use</span> <span class="p-5">privacy policy</span></p>
